<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlantationYear">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/bankura"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:text="@string/digital"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:text="@string/plantationyear"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/p_year"
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/plantationtext"
        android:inputType="numberDecimal"
        android:drawableLeft="@drawable/ic_action_edit"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="201dp"
        android:text="@string/select"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="237dp"
        android:paddingLeft="20dp"
        android:dropDownSelector="@drawable/ic_action_expand"
        android:background="@drawable/edit_round"/>

    <Button
        android:id="@+id/proceedfinal"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="216dp"
        android:drawableLeft="@drawable/ic_action_proceed"
        android:paddingLeft="10dp"
        android:textAllCaps="false"
        android:drawablePadding="-20dp"
        android:background="@drawable/edit_round"
        android:text="@string/proceed" />

    <Button
        android:id="@+id/backbuttonplant"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:drawableLeft="@drawable/ic_action_back"
        android:paddingLeft="10dp"
        android:textAllCaps="false"
        android:drawablePadding="-20dp"
        android:background="@drawable/edit_round"
        android:text="@string/back" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="130dp"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="95dp"
        android:layout_marginStart="52dp"
        android:background="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="129dp"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:background="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="128dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView9"
        android:background="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:text="@string/plantation"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="@string/powered" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="23dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true" />


</RelativeLayout>