<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/div"
        android:textSize="18sp"
        android:textColor="@android:color/holo_green_dark"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="76dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/bankura" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:text="@string/digital"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="211dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/save"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_action_login"
        android:text="@string/save"
        android:drawablePadding="-25dp"
        android:textAllCaps="false"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="130dp"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="153dp"
        android:layout_marginStart="52dp"
        android:background="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="129dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView9"
        android:background="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="146dp"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:background="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:text="@string/plantation" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/powered" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="23dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true" />

</RelativeLayout>