<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Manage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/bankura"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:text="@string/digital"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/journal"
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="169dp"
        android:background="@drawable/edit_round"
        android:drawableStart="@drawable/ic_action_edit"
        android:drawablePadding="10dp"
        android:hint="@string/enter"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/proceedbutton"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="217dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_action_proceed"
        android:drawablePadding="-20dp"
        android:hint="@string/enter"
        android:paddingLeft="10dp"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/findbutton"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="242dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_action_oksign"
        android:drawablePadding="-20dp"
        android:hint="@string/enter"
        android:paddingLeft="10dp"
        android:text="@string/find"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="191dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_action_back"
        android:drawablePadding="-20dp"
        android:hint="@string/enter"
        android:paddingLeft="10dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="130dp"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="119dp"
        android:layout_marginStart="52dp"
        android:background="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="129dp"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:background="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="128dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView9"
        android:background="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/plantation"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:text="@string/powered" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="23dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true" />


</RelativeLayout>